# Hybrid-search-engine

./: .gitattributes  .gitignore  CLAUDE.md  GIT_COMMIT_GUIDE.md  PRE_COMMIT_CHECKLIST.md  QUICK_START.md  README.md  USAGES.md  colab_vector_indexing_guide.ipynb  hybrid_search_engine_implementation_guide.md
hybrid-search-engine/: .env.example  .gitignore  BENCHMARK_AND_DEPLOYMENT_GUIDE.md  docker-compose.yml  download_msmarco_hf.py  pyproject.toml  test.txt
hybrid-search-engine/Benchmark/: artifact_size.py  benchmark_retrieval.py  create_eval_subset.py  document_count.py
hybrid-search-engine/Benchmark/results/: 1M.json  1M.md  2M.json  2M.md  750k.json  750k.md  README.md
hybrid-search-engine/scripts/: download_msmarco.py  download_msmarco_hf.py  evaluate.py  index_documents.py  index_vectors.py  init_db.py  quantize_vector_index.py  test_bm25.py  test_cross_encoder_reranker.py  test_fusion.py  test_hybrid_search.py  test_preprocessor.py  test_spell_corrector.py  test_vector.py
hybrid-search-engine/src/: __init__.py  config.py
hybrid-search-engine/src/api/: main.py  models.py
hybrid-search-engine/src/api/routes/: search.py
hybrid-search-engine/src/database/: docstore.py  models.py  postgres.py  redis_client.py
hybrid-search-engine/src/indexing/: checkpoint.py  pipeline.py  preprocessing.py
hybrid-search-engine/src/query/: spell_check.py
hybrid-search-engine/src/search/: bm25.py  cross_encoder_reranker.py  fusion.py  hybrid_search.py  vector.py
hybrid-search-engine/tests/: __init__.py  test_api.py  test_bm25.py  test_preprocessing.py
