[project]
name = "hybrid-search-engine"
version = "0.1.0"
description = "A hybrid neural search engine with BM25, vector search, cross-encoder re-ranking, and learned ranking"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",

    # BM25 keyword search
    "tantivy>=0.22.0",

    # Vector search
    "faiss-cpu>=1.7.4",

    # Embeddings & re-ranking
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",

    # Learning-to-Rank
    "lightgbm>=4.2.0",

    # Query understanding
    "symspellpy>=6.7.7",
    "nltk>=3.8.1",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Cache
    "redis>=5.0.1",

    # Data processing
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",        # Fast Python linter
    "locust>=2.20.0",      # Load testing
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",  # For evaluation metrics
]

[tool.ruff]
line-length = 100
target-version = "py311"
